// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Patterns construct fails with unkown pattern 1`] = `"unkown pattern foobar"`;

exports[`Patterns pattern acorn 1`] = `
OXOOOOO
OOOXOOO
XXOOXXX
`;

exports[`Patterns pattern beacon 1`] = `
XXOO
XXOO
OOXX
OOXX
`;

exports[`Patterns pattern beehive 1`] = `
OXXO
XOOX
OXXO
`;

exports[`Patterns pattern blinker 1`] = `
XXX
OOO
`;

exports[`Patterns pattern block 1`] = `
XX
XX
`;

exports[`Patterns pattern boat 1`] = `
XXO
XOX
OXO
`;

exports[`Patterns pattern diehard 1`] = `
OOOOOOXO
XXOOOOOO
OXOOOXXX
`;

exports[`Patterns pattern exhibit_infinite_growth_1 1`] = `
OOOOOOXO
OOOOXOXX
OOOOXOXO
OOOOXOOO
OOXOOOOO
XOXOOOOO
`;

exports[`Patterns pattern glider 1`] = `
OXO
OOX
XXX
`;

exports[`Patterns pattern glider_eater 1`] = `
OOOOOOOXX
OOOXOOOXX
OOXOXOOOO
OXOXOOOOO
OXOOOOOOO
XXOOOOOOO
`;

exports[`Patterns pattern gosper_glider_gun 1`] = `
OOOOOOOOOOOOOOOOOOOOOOOOXOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOXOXOOOOOOOOOOO
OOOOOOOOOOOOXXOOOOOOXXOOOOOOOOOOOOXX
OOOOOOOOOOOXOOOXOOOOXXOOOOOOOOOOOOXX
XXOOOOOOOOXOOOOOXOOOXXOOOOOOOOOOOOOO
XXOOOOOOOOXOOOXOXXOOOOXOXOOOOOOOOOOO
OOOOOOOOOOXOOOOOXOOOOOOOXOOOOOOOOOOO
OOOOOOOOOOOXOOOXOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOXXOOOOOOOOOOOOOOOOOOOOOO
`;

exports[`Patterns pattern guns_and_eaters 1`] = `
OOOOOOOOOOOXOOOOOOOOOOOOOOOOOOOOOOOOOOOOOXXOOOO
OOOOOOOOOOOXOXOOOOOOOOOOOOOOOOOOOOOOOOOOOXOOOOO
XXOOOOOOOOOOOOXXOOOOOOXXOOOOOOOOOOOOOOOXOXOOOOO
XXOOOOOOOOOOOOXXOOOOXOOOXOOOOOOOOOOOOOXOXOOOOOO
OOOOOOOOOOOOOOXXOOOXOOOOOXOOOOOOOOXXOOOXOOOOOOO
OOOOOOOOOOOXOXOOOOXXOXOOOXOOOOOOOOXXOOOOOOOOOOO
OOOOOOOOOOOXOOOOOOOXOOOOOXOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOXOOOXOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOXXOOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOOXXOOOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOOXOOOXOOOOOOOOOOOOOOOOOOOO
OOOOOOOOOOOOOOOOOOOOOXOOOOOXOOOOOOOXOOOOOOOOOOO
OOOOOOOOOOOXXOOOOOOOOXOOOXOXXOOOOXOXOOOOOOOOOOO
OOOOOOOXOOOXXOOOOOOOOXOOOOOXOOOXXOOOOOOOOOOOOOO
OOOOOOXOXOOOOOOOOOOOOOXOOOXOOOOXXOOOOOOOOOOOOXX
OOOOOXOXOOOOOOOOOOOOOOOXXOOOOOOXXOOOOOOOOOOOOXX
OOOOOXOOOOOOOOOOOOOOOOOOOOOOOOOOOXOXOOOOOOOOOOO
OOOOXXOOOOOOOOOOOOOOOOOOOOOOOOOOOOOXOOOOOOOOOOO
`;

exports[`Patterns pattern lightweight_spaceship 1`] = `
OXOOX
XOOOO
XOOOX
XXXXO
`;

exports[`Patterns pattern loaf 1`] = `
OXXO
XOOX
OXOX
OOXO
`;

exports[`Patterns pattern pulsar 1`] = `
OOXXXOOOXXXOO
OOOOOOOOOOOOO
XOOOOXOXOOOOX
XOOOOXOXOOOOX
XOOOOXOXOOOOX
OOXXXOOOXXXOO
OOOOOOOOOOOOO
OOXXXOOOXXXOO
XOOOOXOXOOOOX
XOOOOXOXOOOOX
XOOOOXOXOOOOX
OOOOOOOOOOOOO
OOXXXOOOXXXOO
`;

exports[`Patterns pattern r_pentomino 1`] = `
OXX
XXO
OXO
`;

exports[`Patterns pattern revolver 1`] = `
XOOOOOOOOOOOOX
XXXOOOOXOOOXXX
OOOXOXOXOOXOOO
OOXOOOOOOXOXOO
OOXOXOOOOOOXOO
OOOXOOXOXOXOOO
XXXOOOXOOOOXXX
XOOOOOOOOOOOOX
`;

exports[`Patterns pattern rotate 1`] = `
XOOO
XOOO
XOOO
XXXX
`;

exports[`Patterns pattern toad 1`] = `
OXXX
XXXO
`;
